--- a/src/containers/Blogs/BlogsByUser/BlogsByUser.module.scss
+++ b/src/containers/Blogs/BlogsByUser/BlogsByUser.module.scss
@@ -35,7 +35,7 @@
     // align-items: center;
     // padding-top: 20px;
     // margin-bottom: 20px;
-    color: rgba(	223,204,153, 1);
+    color: #2D3F47;
     font-size: 30px;
     text-transform: uppercase;
     letter-spacing: 1px;
