--- a/src/containers/Blogs/Pets/Pets.module.scss
+++ b/src/containers/Blogs/Pets/Pets.module.scss
@@ -21,8 +21,10 @@
     position: fixed;
     right: 20px;
     bottom: 20px;
-    background-color: #dfcc99 ;
-    color: #5a5757;
+    // background-color: #dfcc99 ;
+    background-color: #2D3F47;
+    // color: #eee;
+    color: white;
     // background-image: linear-gradient(to right ,#6782B4 ,#B1BFD8);
     z-index: 1;
 }
