--- a/src/containers/Home/Home.module.scss
+++ b/src/containers/Home/Home.module.scss
@@ -44,6 +44,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(	223,204,153, 0.7);
+    // background-color: ;
 
     &:hover {
         transform: translateY(-3px);
