--- a/src/components/PopularBlogs/PopularBlogs.module.scss
+++ b/src/components/PopularBlogs/PopularBlogs.module.scss
@@ -38,8 +38,9 @@
 
 .Post .Face1 {
     width: 350px;
-    height: 220px;
+    height: 440px;
     transition: 0.5s;
+    position: relative;
 
     @media screen and (max-width: 820px) {
         width: 100%;
@@ -48,8 +49,8 @@
 }
 .Post .Face2 {
     width: 350px;
-    height: 150px;
-    margin-top: 55px;
+    // height: 250px;
+    margin-top: 66px;
     transition: 0.5s;
     @media screen and (max-width: 820px) {
         width: 100%;
@@ -100,40 +101,49 @@
     right: 0;
     bottom: 0;
     font-weight: 500;
-    // margin-top: 25px;
-    // float: right;
 }
 
 
 
 .Post .Face.Face1 .Content {
     transition: 0.5s;
-    
-    
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 
 .Post .Face.Face1 .Content .PopularPostImg {
     position: relative;
-    // width: 500px;
-    width: 350px;
-    height: 150px;
-    margin: 0 auto;
-    margin-top: -30px;
+    width: 100%;
+    min-width: 350px;
+    height: 76%;
+    
+    @media screen and (max-width: 500px) {
+        min-width: 300px;
+        
+    }
 
-    // @media screen and (max-width: 820px) {
-    //     width: 100%;
-    // }
-
+    @media screen and (max-width: 430px) {
+        min-width: 200px;
+        
+    }
 }
 
 .Post .Face.Face1 .Content .PopularPostImg img {
     position: absolute;
+    // margin-top: -36px;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    background-position: 0 30%;
+    // @media screen and (max-width: 800px) {
+    //     left: 10px;
+    // }
 }
 
 // .Post:hover .Face.Face1 .Content .PopularPostImg {
@@ -142,7 +152,7 @@
 // }
 
 .Post .Face.Face1 .Content h3{
-    margin: 10px 0 0;
+    margin-top: 12px ;
     padding: 0;
     text-align: center;
     font-size: 20px;
