--- a/src/components/Toolbar/Toolbar.module.scss
+++ b/src/components/Toolbar/Toolbar.module.scss
@@ -1,18 +1,15 @@
 
-header {
-    // background-color: transparent;
+header {    
     height: 70px;
-    background: #f5f5f5;
-    // background: rgba(0,0,0,0.8);
-    // color: #5a5757;
+    background: transparent;
     display: flex;
-    color: rgb(223,204,153) ;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     z-index: 100;
+    padding: 0 18px;
     position: fixed;
-    // position: relative;
+    transition: .3s linear;
     @media only screen and (max-width: 500px) {
         flex-wrap: wrap;
         height: 110px;
@@ -22,7 +19,7 @@ header {
 
 header.sticky {
     background-color: #f5f5f5 ;
-    padding: 5px 10px;
+    // padding: 5px 10px;
     position: fixed;
 }
 
@@ -180,8 +177,48 @@ header.sticky .Image__Button{
     margin-right: 20px;
     position: relative;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    // flex-wrap: wrap;
 }
 
+.UserNav a {
+    margin: 0 10px;
+    color: #2D3F47;
+    text-decoration: none;
+    font-size: '20px';
+    font-weight: 500;
+    transition: .2s linear;
+
+    &:hover {
+        color: #2D3F47;
+        opacity: 0.8;
+        // transform: translateY(-2px);
+        // color: ;
+        // color: white;
+        // font-weight: 700;
+    }
+
+    @media only screen and (max-width: 1100px)  {
+        display: none;
+    }
+
+    // @media only screen and (max-width: 1100px) {
+    //     font-size: 12px;
+    // }
+
+}
+
+// .UserNav button {
+//     padding: 8px 24px;
+//     background-color: #029E74;
+//     color: white;
+//     font-size: 14px;
+//     font-weight: 500;
+//     cursor: pointer;
+//     border: none;
+//     outline: none;
+// }
 
 
 .Image {
@@ -210,10 +247,10 @@ header.sticky .Image__Button{
 }
 
 
-header.sticky .UserNav{
-    color: #5a5757;
-    font-weight: 500;
-}
+// header.sticky .UserNav{
+//     color: #5a5757;
+//     font-weight: 500;
+// }
 
 
 header.sticky .LoginButton{
@@ -275,19 +312,6 @@ header.sticky .Hamburger{
     top: 10px; 
 }
 
- .Toggler:checked + .Hamburger > div {
-    transform: rotate(135deg);
-}
-
- .Toggler:checked + .Hamburger > div:before,
- .Toggler:checked + .Hamburger > div:after {
-    top: 0;
-    transform: rotate(90deg);
-}
-
- .Toggler:checked:hover + .Hamburger > div {
-    transform: rotate(225deg);
-}
 
 
 
@@ -295,10 +319,11 @@ header.sticky .Hamburger{
     position: fixed;
     overflow: hidden;
     top:0;
-    left: 0;
+    right: 0;
     z-index: 4;
     height: 100vh;
     width: 100%;
+    // width: 400px;
     background-size: cover;
     background: rgba(0,0,0,0.9);
     // background-color: #dfcc99 ;
@@ -359,8 +384,8 @@ header.sticky .Hamburger{
 .FullMenu .ModalClose {
     position: absolute;
     z-index: 1000;
-    top: 8px;
-    right: 12px;
+    top: 12px;
+    right: 35px;
     height: 25px;
     width: 25px;
     width: 40px;
@@ -404,3 +429,20 @@ header.sticky .Hamburger{
     }
 }
 
+
+// @keyframes moveInFromRight{
+//     0% {
+//         opacity: 0;
+//         transform: translateX(10rem);
+
+//     }
+
+//     // 80% {
+//     //     transform: translateX(-1rem);
+//     // }
+
+//     100% {
+//         opacity: 1;
+//         transform: translateX(0);
+//     }
+// }
