--- a/src/containers/Auth/Auth.module.scss
+++ b/src/containers/Auth/Auth.module.scss
@@ -70,20 +70,20 @@
     color: #555;
 }
 
-// .Section .Container .User .FormBox form input {
-//     font-size: 14px;
-//     position: relative;
-//     width: 100%;
-//     background: #f5f5f5;
-//     border: none;
-//     outline: none;
-//     margin: 8px 0;
-//     color: #333;
-//     box-shadow: none;
-//     padding: 10px;
-//     letter-spacing: 1px;
-//     font-weight: 300;
-// }
+.Section .Container .User .FormBox form .Input {
+    font-size: 14px;
+    position: relative;
+    width: 100%;
+    background: #f5f5f5;
+    border: none;
+    outline: none;
+    margin: 8px 0;
+    color: #333;
+    box-shadow: none;
+    padding: 10px;
+    letter-spacing: 1px;
+    font-weight: 300;
+}
 
 .Section .Container .User .FormBox form .AnchorButton {
     margin-top: 0px;
