--- a/src/containers/Home/Home.module.scss
+++ b/src/containers/Home/Home.module.scss
@@ -9,10 +9,71 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #F5FAFD;
     // top: -70px;
 }
 
+.ImageMain {
+    flex: 1.5;
+    position: relative;
+    width: 70%;
+    height: 100%;
+    // height: 100vh;
+    // width: 100%;
+}
 
+.FitBgMain {
+    position: absolute;
+    left: 0;
+    top: 70px;
+    object-fit: cover;
+    width: 100%;
+    height: calc(100% - 70px);
+    clip-path: polygon(0 0, 85% 0, 100% 100%, 0 100%);
+}
+
+
+.BannerContent {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    padding: 0px 20px;
+}
+
+.BannerContent h1 {
+    font-weight: 500;
+    line-height: 30px;
+    letter-spacing: 2px;
+    font-size: 30px;
+    color: #2d3f47;
+    margin-bottom: 30px;
+}
+
+.BannerContent p {
+    color: #2D3F47;
+    margin-bottom: 30px;
+}
+
+.ButtonArea {
+    display: flex;
+    // justify-content: center;
+}
+.BannerContent .ButtonArea button {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 20px;
+    margin-right: 20px;
+    // width: 30%;
+    border: none;
+    cursor: pointer;
+    display: inline-block;
+    border-radius: 5px;
+    transition: all .2s;
+    font-size: 16px;
+    color: white;
+    font-weight: 700;
+    background-image: linear-gradient( to right bottom, #FF6975 , #F8B5BB);
+}
 
 .FitBg {
     position: absolute;
@@ -44,7 +105,6 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(	223,204,153, 0.7);
-    // background-color: ;
 
     &:hover {
         transform: translateY(-3px);
@@ -115,7 +175,7 @@
 
 .Services {
     min-height: 100vh;
-    background: linear-gradient(#E6D7B3, #E6D7B3 50%, #f5f5f5 50%, #f5f5f5 100%);
+    background: linear-gradient(#F5FAFD, #F5FAFD 50%, #2D3F47 50%, #2D3F47 100%);
 }
 
 .Services h1 {
@@ -124,7 +184,8 @@
     align-items: center;
     padding-top: 20px;
     margin-bottom: 20px;
-    color: #333;
+    // color: #333;
+    color:rgba(45, 63, 71, 1);
     font-size: 30px;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -162,8 +223,9 @@
     // background-color: rgba(0,0,0,.4);
 //     background-color: #ffd3ea;
 // background-image: linear-gradient(315deg, #ffd3ea 0%, #403020 74%);
-background-color: #e2ac6b;
-background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
+// background-color: #e2ac6b;
+    background-image: linear-gradient( to right bottom, #FF6975 , #F8B5BB);
+// background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
 
 // background-color: #e09082;
 // background-image: linear-gradient(315deg, #e09082 0%, #f8dba4 74%);
@@ -224,7 +286,7 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
 @media(max-width: 1000px) {
     .Services {
         // background: #f5f5f5;
-        background: rgba(	223,204,153, 0.7);
+        background: rgba(45, 63, 71, 1);
     }
 
     .Container  .ServiceBox {
@@ -263,7 +325,7 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
+    background-color: #2D3F47;
 }
 
 .Card h1 {
@@ -272,7 +334,8 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
     align-items: center;
     padding-top: 20px;
     margin-bottom: 20px;
-    color: #333;
+    // color: #333;
+    color: #F5FAFD;
     font-size: 30px;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -282,8 +345,9 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
 .Card .Button {
     margin-top: 20px;
     margin-bottom: 20px;
-    background-color: rgba(	223,204,153, 0.7) ;
-    color: white;
+    background-color: #F5FAFD;
+    // background-image: linear-gradient( to right bottom, #FF6975 , #F8B5BB);;
+    color: #2D3F47;
     font-size: 20px;
     border: none;
     padding: 5px 25px;
@@ -308,6 +372,7 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    
 }
 
 .PetList .PetBox {
@@ -341,7 +406,9 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: rgba(	223,204,153, 0.7) ;
+    // background-color: rgba(	223,204,153, 0.7) ;
+    // background-image: linear-gradient( to right bottom, #FF6975 , #F8B5BB);
+    background-color: #F5FAFD;
     color: #5a5757;
     clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
 
@@ -405,10 +472,10 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
 
 
 .Clients {
-    min-height: 100vh;    
+    min-height: 100vh;
     background-position: center;
     background-size: cover;
-    background-image: linear-gradient(to right  bottom, rgba(	223,204,153, 0.5) ,  rgba(	223,204,153, 0.3))
+    background-image: linear-gradient(to right  bottom, #F5FAFD , rgba(45, 63, 71, 0.6))
             , url(../../assets/client.jpg);
     overflow: hidden;
     padding: 50px;
@@ -420,7 +487,7 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
     align-items: center;
     padding-top: 20px;
     margin-bottom: 20px;
-    color: #333;
+    color: rgba(45, 63, 71, 1);
     font-size: 30px;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -432,7 +499,7 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
     opacity: 0.8;
     text-align: center;
     padding: 30px 30px 50px;
-    border: 10px solid  rgba(	223,204,153, 0.4);
+    border: 10px solid  rgba(45, 63, 71, 1);
     position: relative;
     margin-top: 80px;
     margin-bottom: 100px;
@@ -464,7 +531,7 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
 .Testimonial span{
     display: inline-block;
     font-size: 60px;
-    color: #bd986b;
+    color: rgba(45, 63, 71, 1);
     margin-bottom: 20px;
     opacity: 0.6;
 }
@@ -493,7 +560,7 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
     display: inline-block;
     border: 6px solid white;
     border-radius: 50%;
-    box-shadow: 0 0 2px 2px #daad86;
+    box-shadow: 0 0 2px 2px rgba(45, 63, 71, 1);
     overflow: hidden;
     z-index: 1;
     position: relative;
