changes in services

--- a/src/containers/Home/Home.module.scss
+++ b/src/containers/Home/Home.module.scss
@@ -120,6 +120,13 @@
         justify-content: center;
         align-items: center;
     }
+
+    @media(max-width: 550px) {
+        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        justify-content: center;
+        align-items: center;
+        margin-top: 8px;
+    }
 }
 
 .BannerContent h1 {
@@ -389,8 +396,9 @@
 
 @media(max-width: 1000px) {
     .Services {
+        background-color: #F5FAFD;
         // background: #f5f5f5;
-        background: rgba(45, 63, 71, 1);
+        // background: rgba(45, 63, 71, 1);
     }
 
     .Container  .ServiceBox {
