put for adoption

--- a/src/containers/Home/Home.module.scss
+++ b/src/containers/Home/Home.module.scss
@@ -125,7 +125,8 @@
         clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
         justify-content: center;
         align-items: center;
-        margin-top: 8px;
+        // margin-top: 8px;
+        margin-top: 0px;
     }
 }
 
