--- a/src/containers/Home/Home.module.scss
+++ b/src/containers/Home/Home.module.scss
@@ -1055,6 +1055,102 @@
 //     }
 // }
 
+.Gallary {
+    // height: 100vh;
+    background-color: #F5FAFD;
+    display: grid;
+    grid-template-columns: repeat(8 , 1fr);
+    grid-template-rows: repeat(7 , 5vw);
+    grid-gap: 15px;
+    padding: 15px;
+    justify-content: stretch;
+    align-items: stretch;
+    
+
+    &__Item {
+        margin: 0px!important;
+        &__1 {
+            grid-row: 1 / span 2;
+            grid-column: 1 / span 2;
+        }
+
+        &__2 {
+            grid-row: 1 / span 3;
+            grid-column: 3 / span 3;
+        }
+
+        &__3 {
+            grid-row: 1 / span 2;
+            grid-column: 6 / span 1;
+        }
+        &__4 {
+            grid-row: 1 / span 2;
+            grid-column: 7 / span 2;
+        }
+        &__5 {
+            grid-row: 3 / span 3;
+            grid-column: 1 / span 2;
+        }
+        &__6 {
+            grid-row: 4 / span 2;
+            grid-column: 3 / span 2;
+        }
+        &__7 {
+            grid-row: 4 / span 1;
+            grid-column: 5 / span 1;
+        }
+        &__8 {
+            grid-row: 3 / span 2;
+            grid-column: 6 / span 2;
+        }
+        &__9 {
+            grid-row: 3 / span 3;
+            grid-column: 8 / span 1;
+        }
+
+        &__10 {
+            grid-row: 6 / span 2;
+            grid-column: 1 / span 1;
+        }
+
+        &__11 {
+            grid-row: 6 / span 2;
+            grid-column: 2 / span 2;
+        }
+
+        &__12 {
+            grid-row: 6 / span 2;
+            grid-column: 4 / span 1;
+        }
+
+        &__13 {
+            grid-row: 5 / span 3;
+            grid-column: 5 / span 3;
+        }
+
+        &__14 {
+            grid-row: 6 / span 2;
+            grid-column: 8 / span 1;
+        }
+
+    }
+
+    &__Img {
+        width: 100%;
+        height: 100%;
+        display: block;
+        object-fit: cover;
+    }
+}
+
+
+// .PetList:hover .PetBox {
+//     opacity: 0.6;
+// }
+
+// .PetList .PetBox:hover {
+//     opacity: 1;
+// }
 
 
 
