--- a/src/containers/Home/Home.module.scss
+++ b/src/containers/Home/Home.module.scss
@@ -702,10 +702,11 @@
 
     .Clients {
         height: 70vh;
+        padding: 0 50px;
     }
 
     .Clients h1 {
-        font-size: 20px;
+        font-size: 18px;
     }
 
     .Testimonial {
