--- a/src/containers/PutUpForAdoption/PutUpForAdoption.module.scss
+++ b/src/containers/PutUpForAdoption/PutUpForAdoption.module.scss
@@ -2,22 +2,32 @@
     min-height: 100vh;
     width: 100%;
     position: relative;
-    background-image: linear-gradient(to right, rgba(245,250,253, 0.4), rgba(253,248,245, 0.4)), url(../../assets/bgg.jpg);
-    // background-image: url(../../assets/bgg.jpg);
-    // background: #f5f5f5;
-    // background-color: #F5FAFD;
-
-    background-position: center;
+    background-image: linear-gradient(to right, rgba(245,250,253, 0.4), rgba(253,248,245, 0.4)), url(../../assets/put3.jpg);
+    background-position: right bottom;
     background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+
+.Back {
+    text-decoration: none;
+    color: black;
+    left: 10px;
+    top: 10px;
+    position: fixed;
+}
+
 .Form {
-    padding-top: 100px;
-    width: 90%;
+    // padding-top: 100px;
+    width: 60%;
     height: 100%;
     opacity: 0.8;
     padding: 20px;
+
+    @media screen and (max-width: 800px) {
+        width: 90%;
+    }
+
 }
