--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -9,7 +9,7 @@ header {
     z-index: 100;
     padding: 0 18px;
     position: fixed;
-    transition: .3s linear;
+    transition: .4s linear;
     @media only screen and (max-width: 500px) {
         flex-wrap: wrap;
         height: 110px;
@@ -18,9 +18,14 @@ header {
 }
 
 header.sticky {
-    background-color: #f5f5f5 ;
-    // padding: 5px 10px;
+    background-color: #f5f5f5;
     position: fixed;
+    padding: 6px 40px 0px 24px;
+    height: 70px;
+
+    .Search {
+        display: none
+    }
 }
 
 .Logo {
@@ -322,14 +327,17 @@ header.sticky .Hamburger{
     right: 0;
     z-index: 4;
     height: 100vh;
-    width: 100%;
+    width: 40%;
     // width: 400px;
     background-size: cover;
     background: rgba(0,0,0,0.9);
     // background-color: #dfcc99 ;
     opacity: 0.95;
     transform: scale(1);
-    animation: moveInFromRight 0.3s ease-out
+    animation-fill-mode: both;
+    // animation: moveInFromRight 0.3s ease-out
+    animation-name: fadeInLeft;
+    animation-duration: 0.5s;
 }
 
 .Content  {
