--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -327,7 +327,7 @@ header.sticky .Hamburger{
     right: 0;
     z-index: 4;
     height: 100vh;
-    width: 40%;
+    width: 100%;
     // width: 400px;
     background-size: cover;
     background: rgba(0,0,0,0.9);
@@ -335,8 +335,8 @@ header.sticky .Hamburger{
     opacity: 0.95;
     transform: scale(1);
     animation-fill-mode: both;
-    // animation: moveInFromRight 0.3s ease-out
-    animation-name: fadeInLeft;
+    animation: moveInFromRight 0.3s ease-out;
+    // animation-name: fadeInLeft;
     animation-duration: 0.5s;
 }
 
