--- a/src/containers/Adopt/Adopt.scss
+++ b/src/containers/Adopt/Adopt.scss
@@ -45,6 +45,7 @@
 //   }
 
 .main-container {
+  height: 100vh;
   padding: 110px 2rem 2rem 2rem;
 
   @media only screen and (max-width: 768px) {
@@ -55,73 +56,19 @@
   //   .pets-listing {
   // height: 500px;
 
-  .filter-container {
-    // color: blue;
-    font-size: 1rem !important;
-    .field > label {
-      font-size: 1rem !important;
-    }
-
-    .gender-radios {
-      flex-wrap: wrap;
-    }
-
-    .filter-form-buttons {
-      margin-top: 2rem;
-    }
-  }
 
   .pet-cards-container {
     //   padding-right: 0 !important;
     //   padding-left: 0 !important;
-    .pet-card {
-      height: 394px;
-      max-height: 394px;
-      //     .pet-image {
-      //         height: 100px;
-      //     img {
-      //       width: 100%;
-      //       height: auto;
-      //     }
-      //   }
+    
 
-      @media only screen and (max-width: 768px) {
-        // margin-left: 10px;
-        // max-width: 300px;
-        // margin-left: auto !important;
-        // margin-right: auto !important;
-        // border: 5px solid red;
-      }
-      cursor: pointer;
-      .dimmer-content {
-        color: black !important;
-        font-size: 1.5rem;
-        font-weight: 700;
-        i {
-          margin-left: 1rem;
-        }
-      }
 
-      .pet-image {
-        // height: 100px;
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        align-items: center;
-        img {
-          width: 100%;
-          height: 200px;
-          display: inline–block;
-          float: left;
-          // height: auto;
-        }
-      }
 
-      .pet-description {
-        // white-space: nowrap;
-        // overflow: hidden;
-        // text-overflow: ellipsis;
-      }
+    .no-pets {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
   //   }
