--- a/src/containers/PutUpForAdoption/PutUpForAdoption.module.scss
+++ b/src/containers/PutUpForAdoption/PutUpForAdoption.module.scss
@@ -7,6 +7,7 @@
     background-size: cover;
     display: flex;
     justify-content: center;
+    // padding-left: 50px;
     align-items: center;
 }
 
